<resources>
    <string name="app_name">Contru-Movil</string>


    <!-- Inicio Activity Main-->
    <string name="Login">Login</string>
    <string name="Registry">Registry</string>
    <!-- Fin Activity Main-->

    <!-- Inicio Activity Login-->
    <string name="Name_Login">Enter your name</string>
    <string name="Password_Login">Enter your password</string>
    <string name="Button_Check_In_Login">Check In</string>
    <!-- Fin Activity Login-->

    <!-- Inicio Activity Main Page App-->
    <string name="Name_Main_Page">Username</string>
    <string name="Access_Main_Page">Level of access</string>
    <!-- Fin Activity Main Page App-->

    <!-- Inicio Activity Registry_Client-->
    <string name="Name_Registry">Enter your name</string>
    <string name="Last_Name_Registry">Enter your last name</string>
    <string name="Nickname_Registry">Enter your Nickname</string>
    <string name="Code_Registry">Enter your code</string>
    <string name="Place_Registry">Enter your location</string>
    <string name="Date_Registry">Enter your start date</string>
    <string name="Template_Date_Registry">AAAA-MM-DD 00:00:00</string>
    <string name="Telephone_Registry">Enter your telephone</string>
    <string name="Password_Registry">Enter your password</string>
    <string name="Button_Date_Registry">Born Date</string>
    <string name="Button_Check_In_Registry">Check in</string>
    <!-- Fin Activity Registry_Client-->

    <!-- -->
    <string name="Main_Nav_Drawer_MainPage">Main Page</string>
    <string name="Main_Nav_Drawer_Clients">Clients</string>
    <string name="Main_Nav_Drawer_Products">Products</string>
    <string name="Main_Nav_Drawer_Orders">Orders</string>
    <string name="Main_Nav_Drawer_Providers">Providers</string>
    <string name="Main_Nav_Drawer_Categories">Categories</string>
    <string name="Main_Nav_Drawer_Vendors">Vendors</string>
    <string name="Main_Nav_Drawer_Exit">Exit</string>
    <!-- -->


    <!-- Inicio de no se que es-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main__page__app">Main_Page_App</string>
    <string name="title_activity_clients">Clients</string>
    <string name="title_activity_products">Products</string>
    <string name="title_activity_orders">Orders</string>
    <string name="title_activity_providers">Providers</string>
    <string name="title_activity_categories">Categories</string>
    <string name="title_activity_vendors">Vendors</string>
    <!-- Fin de no se que es-->

    <!-- Inicio de los Strings del Activity de registro de producto-->
    <string name="Name_Registry_Product">Name</string>
    <string name="Branch_Office_Registry_Product">Branch Office</string>
    <string name="Description_Registry_Product">Description</string>
    <string name="Provider_Registry_Product">Provider</string>
    <string name="Category_Registry_Product">Category</string>
    <string name="Exent_Registry_Product">Exent</string>
    <string name="Quantity_Registry_Product">Quantity</string>
    <!-- -->

    <!-- Inicio Activity Registry_Provider-->
    <string name="Name_Registry_Provider">Enter your name</string>
    <string name="Last_Name_Registry_Provider">Enter your last name</string>
    <string name="Place_Registry_Provider">Enter your Nickname</string>
    <string name="Card_Number_Registry_Provider">Enter your card number</string>
    <string name="Date_Registry_Provider">Enter your start date</string>
    <string name="Template_Date_Registry_Provider">DD/MM/AAAA</string>
    <string name="Button_Date_Registry_Provider">Born Date</string>
    <string name="Button_Check_In_Registry_Provider">Check in</string>
    <!-- Fin Activity Registry_Provider-->

    <!-- Inicio Activity Registry_Order-->
    <string name="Branch_Registry_Order">Branch Office</string>
    <string name="Client_Registry_Order">Client name</string>
    <string name="Telephone_Registry_Order">Enter your telephone</string>
    <string name="Products_Registry_Order">List of Products</string>
    <string name="Time_Registry_Order">Hour of sale</string>
    <string name="Add_Registry_Order">Add</string>
    <string name="Buy_Registry_Order">Buy</string>
    <!-- Fin Activity Registry_Order-->

    <!-- -->
    <string name="Name_Registry_Category">Category name</string>
    <string name="Description_Registry_Category">Description of Category</string>
    <!-- -->

    <!-- String para botones de creacion-->
    <string name="CreateButton">Create</string>
    <!-- -->

    <string name="action_search">Search</string>


    <!-- Inicio de claves para paso de parametros-->
    <string name="Action_Registry">ActionRegistry</string>
    <!-- Fin de claves para paso de parametros-->
</resources>


