<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_registry__product"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.tec.diegogranados.contru_movil.Activitys.Registry_Product">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <LinearLayout
            android:layout_height="fill_parent"
            android:layout_width="fill_parent"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:weightSum="1">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:scaleType="fitCenter"
                android:src="@mipmap/ic_assignment_black_24dp" />

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:text="@string/Name_Registry_Product"
                android:gravity="center_horizontal"
                android:textSize="20dp"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="5dp"
                android:id="@+id/EditText_Name_Product_Registry"
                android:gravity="center_horizontal"
                />

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:text="@string/Description_Registry_Product"
                android:gravity="center_horizontal"
                android:textSize="20dp"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="5dp"
                android:id="@+id/EditText_Description_Registry_Product"
                android:gravity="center_horizontal"
                />

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:text="@string/Provider_Registry_Product"
                android:gravity="center_horizontal"
                android:id="@+id/textView2"
                android:textSize="20dp"/>

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_centerInParent="true"
                android:orientation="vertical"
                android:weightSum="1"
                android:gravity="center_horizontal">

                <TextView
                    android:id = "@+id/TextView_Provider_Registry_Product"
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:text="XXX"
                    android:gravity="center_horizontal"
                    />

                <Button
                    android:id = "@+id/button_BProvider_Registry_Product"
                    android:layout_width = "wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Provider_Registry_Product"
                    />
            </LinearLayout>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:text="@string/Category_Registry_Product"
                android:gravity="center_horizontal"
                android:textSize="20dp"
                />

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_centerInParent="true"
                android:orientation="vertical"
                android:weightSum="1"
                android:gravity="center_horizontal">

                <TextView
                    android:id = "@+id/TextView_Category_Registry_Product"
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:text="XXX"
                    />

                <Button
                    android:id = "@+id/button_BCategory_Registry_Product"
                    android:layout_width = "wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Category_Registry_Product"
                    />

            </LinearLayout>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:text="@string/Branch_Office_Registry_Product"
                android:gravity="center_horizontal"
                android:textSize="20dp"
                />

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_centerInParent="true"
                android:orientation="vertical"
                android:weightSum="1"
                android:gravity="center_horizontal">

                <TextView
                    android:id = "@+id/TextView_Branch_Registry_Product"
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:text="XXX"
                    />

                <Button
                    android:id = "@+id/button_BBranch_Registry_Product"
                    android:layout_width = "wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Branch_Office_Registry_Product"
                    />

            </LinearLayout>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:text="@string/Exent_Registry_Product"
                android:gravity="center_horizontal"
                android:textSize="20dp"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="5dp"
                android:inputType="number"
                android:id="@+id/EditText_Exent_Registry_Product"
                android:gravity="center_horizontal"
                />

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:text="@string/Quantity_Registry_Product"
                android:gravity="center_horizontal"
                android:textSize="20dp"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="5dp"
                android:inputType="number"
                android:id="@+id/EditText_Quantity_Registry_Product"
                android:gravity="center_horizontal"
                />

            <Button
                android:id = "@+id/button_Registry_Product_Registrar"
                android:layout_width = "match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Button_Check_In_Registry"
                />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
